commit 4 solve overflow

--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ nav {
   box-shadow: 0 1px 4px rgba(146, 161, 176, 0.15);
   position: fixed;
   top: 0;
+  z-index: 1;
 }
 nav img {
   width: 65px;
